# SPDX-FileCopyrightText: 2022 Magenta ApS
#
# SPDX-License-Identifier: MPL-2.0

[tool.poetry]
name = "mo-ldap-import-export"
version = "0.1.0"
description = "Rammearkitektur AMQP service for making AMQP messages on changing effects in os2mo."
authors = ["Magenta ApS <info@magenta.dk>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8"
pika = "^1.3.0"
python-dateutil = "^2.8.2"
pydantic = "^1.9.0"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
pre-commit = "^2.18.1"
mypy = "^0.961"
types-python-dateutil = "^2.8.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopub]
git-username = "MagentaBot"
git-email = "info@magenta.dk"
